# vibe-code-boilerplate

./: .cursorrules  CLAUDE.md  pyproject.toml
.claude/commands/: logs.md
.githooks/: pre-commit  pre-push
.github/: copilot-instructions.md
.github/workflows/: pr-policy.yml  security.yml
agent_instructions/: CLI.md  COMMANDS.md  CORE.md
docs/operations/: logs-cli-reference.md
docs/superpowers/specs/: 2026-04-01-cli-view-aliases-design.md
lib/vibe/: config.py  config_schema.py  doctor.py  label_sync.py
lib/vibe/cli/: costs.py  main.py  ticket.py
lib/vibe/costs/: __init__.py  alerts.py  base.py  registry.py
lib/vibe/costs/providers/: __init__.py  anthropic.py  fly.py  github_actions.py  neon.py  openai.py  sentry.py  supabase.py  vercel.py
lib/vibe/trackers/: base.py  linear.py
lib/vibe/wizards/: costs.py  fly.py  setup.py  tracker.py
recipes/cli/: cli-conventions.md  cli-reference-template.md
recipes/git-hooks/: git-hooks.md
recipes/observability/: axiom.md
recipes/tickets/: creating-tickets.md  linear-projects.md
tests/: test_cli_ticket.py  test_costs_alerts.py  test_costs_base.py  test_costs_cli.py  test_costs_provider_vercel.py  test_costs_providers.py  test_costs_registry.py  test_costs_wizard.py  test_doctor.py  test_label_sync.py  test_trackers_linear.py  test_views.py
